--- a/ConvenioMed/Marketing/ConvenioMed.Marketing.Domain/ConvenioMed.Marketing.Domain.csproj
+++ b/ConvenioMed/Marketing/ConvenioMed.Marketing.Domain/ConvenioMed.Marketing.Domain.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="9.0.0" />
+    <Folder Include="CommandHandlers\" />
+    <Folder Include="Commands\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
   <ItemGroup>
