--- a/ConvenioMed/Financeiro/ConvenioMed.Financeiro.Api/ConvenioMed.Financeiro.Api.csproj
+++ b/ConvenioMed/Financeiro/ConvenioMed.Financeiro.Api/ConvenioMed.Financeiro.Api.csproj
@@ -1,9 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,14 +11,16 @@
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.1" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.1.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\_Core\ConvenioMed.Core.Domain\ConvenioMed.Core.Domain.csproj" />
+    <ProjectReference Include="..\..\_Core\ConvenioMed.Core.Infra.Data\ConvenioMed.Core.Infra.Data.csproj" />
     <ProjectReference Include="..\ConvenioMed.Financeiro.Domain\ConvenioMed.Financeiro.Domain.csproj" />
     <ProjectReference Include="..\ConvenioMed.Financeiro.Infra.Data\ConvenioMed.Financeiro.Infra.Data.csproj" />
   </ItemGroup>
+
 
 </Project>
