--- a/ConvenioMed/Marketing/ConvenioMed.Marketing.ConsoleApp/ConvenioMed.Marketing.ConsoleApp.csproj
+++ b/ConvenioMed/Marketing/ConvenioMed.Marketing.ConsoleApp/ConvenioMed.Marketing.ConsoleApp.csproj
@@ -1,9 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <StartupObject></StartupObject>
+    <ApplicationIcon />
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,13 +19,10 @@
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\_Core\ConvenioMed.Core.Domain\ConvenioMed.Core.Domain.csproj" />
-    <ProjectReference Include="..\ConvenioMed.Financeiro.Domain\ConvenioMed.Financeiro.Domain.csproj" />
-    <ProjectReference Include="..\ConvenioMed.Financeiro.Infra.Data\ConvenioMed.Financeiro.Infra.Data.csproj" />
+    <ProjectReference Include="..\ConvenioMed.Marketing.Domain\ConvenioMed.Marketing.Domain.csproj" />
   </ItemGroup>
 
 </Project>
